fixed bug; support for Tumblr;  updated to v0.7.7

--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content"
@@ -10,11 +10,10 @@
     <ml.puredark.hviewer.ui.customs.MyPullLoadMoreRecyclerView
         android:id="@+id/rv_collection"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/item_collection" />
 
-</LinearLayout>
+</RelativeLayout>
