long press to share picture; added PictureRule; a few changes on ui; updated to v0.7.7

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -67,7 +67,7 @@
 
                     <ImageView
                         android:id="@+id/btn_return"
-                        android:layout_width="@dimen/tool_bar_height"
+                        android:layout_width="48dp"
                         android:layout_height="@dimen/tool_bar_height"
                         android:background="@drawable/bg_button"
                         android:padding="16dp"
