--- a/app/src/main/res/layout/item_site_tag.xml
+++ b/app/src/main/res/layout/item_site_tag.xml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
-        android:id="@+id/container"
+    android:layout_height="wrap_content"
+    android:padding="3dp">
+    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ripple_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:gravity="center"
-        android:elevation="2dp"
-        app:contentPadding="4dp"
-        app:cardBackgroundColor="@color/darkgray"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="2dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="false">
-
-        <TextView
-            android:id="@+id/tv_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            tools:text="males only" />
-
-    </android.support.v7.widget.CardView>
+        app:mrl_rippleOverlay="false"
+        app:mrl_rippleColor="@color/colorPrimary"
+        app:mrl_rippleBackground="@color/dimgray"
+        app:mrl_rippleAlpha="1"
+        app:mrl_rippleDimension="10dp"
+        app:mrl_rippleDuration="250"
+        app:mrl_rippleFadeDuration="75"
+        app:mrl_rippleHover="true"
+        app:mrl_rippleDelayClick="true"
+        app:mrl_ripplePersistent="true">
+    </com.balysv.materialripple.MaterialRippleLayout>
 </LinearLayout>
