--- a/app/src/main/res/layout/item_site_group.xml
+++ b/app/src/main/res/layout/item_site_group.xml
@@ -17,13 +17,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/item_site_height"
         android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/item_site_icon_size"
+            android:layout_height="@dimen/item_site_icon_size"
             android:layout_marginTop="@dimen/half_padding"
             android:layout_marginBottom="@dimen/half_padding"
             android:layout_marginLeft="@dimen/uni_padding"
@@ -41,7 +41,7 @@
             android:maxLines="1"
             android:ellipsize="end"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="@dimen/item_site_text_size"
             tools:text="未分类" />
         <ml.puredark.hviewer.libraries.advrecyclerview.common.widget.ExpandableItemIndicator
             android:id="@+id/indicator"
