--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -211,5 +211,8 @@
 
     <color name="snackbar_action_color_done">#ffccccff</color>
 
+    <color name="dialog_bg_color_gray">#424242</color>
+    <color name="dialog_label_color">#c7c7c7</color>
+
     <color name="expandable_item_indicator_color">#42000000</color>
 </resources>
