test video player

--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -8,8 +8,8 @@
     android:layout_height="wrap_content"
     android:paddingLeft="@dimen/uni_padding"
     android:paddingRight="@dimen/uni_padding"
-    android:paddingTop="6dp"
-    android:paddingBottom="6dp"
+    android:paddingTop="@dimen/half_padding"
+    android:paddingBottom="@dimen/half_padding"
     app:mrl_rippleOverlay="true"
     app:mrl_rippleColor="@color/black"
     app:mrl_rippleAlpha="0.1"
