--- a/app/src/main/res/layout/item_picture_index.xml
+++ b/app/src/main/res/layout/item_picture_index.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="140dp"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
     app:cardBackgroundColor="#FFFFFF"
@@ -13,11 +13,10 @@
     app:cardUseCompatPadding="false">
 
     <RelativeLayout
-        android:layout_width="100dp"
-        android:layout_height="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/bg_cover"
         android:padding="4dp">
-
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="match_parent"
@@ -31,7 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             fresco:actualImageScaleType="centerCrop"/>
-
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
