--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -42,6 +42,12 @@
             android:title="@string/settings_view_open_one_pic_gallery"
             android:summary="@string/settings_view_open_one_pic_gallery_summary"/>
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_view_one_hand"
+            android:title="@string/settings_view_one_hand"
+            android:summary="@string/settings_view_one_hand_summary"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -49,7 +55,7 @@
         android:title="@string/settings_download">
 
         <CheckBoxPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="pref_download_high_res"
             android:title="@string/settings_download_high_res"
             android:summary="@string/settings_download_high_res_summary"/>
