设置选项添加记住打开站点功能,解决一些修改时留下的bug

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,6 +9,12 @@
 
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="pref_view_rememberLastSite"
+            android:title="@string/settings_view_rememberLastSite"
+            android:summary="@string/settings_view_rememberLastSite_summary" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="pref_view_high_res"
             android:title="@string/settings_view_high_res"
             android:summary="@string/settings_view_high_res_summary"/>
