添加备份设置功能,解决一些修改时留下的bug

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -145,10 +145,12 @@
         android:title="@string/settings_bk_rs">
         <Preference
             android:key="pref_backupandrestore_backup"
-            android:title="@string/settings_backup" />
+            android:title="@string/settings_backup"
+            android:summary="@string/settings_backup_summary"/>
         <Preference
             android:key="pref_backupandrestore_restore"
-            android:title="@string/settings_restore" />
+            android:title="@string/settings_restore"
+            android:summary="@string/settings_restore_summary"/>
     </PreferenceCategory>
 
     <PreferenceCategory
