--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,13 +7,13 @@
         android:key="pref_view_settings"
         android:title="@string/settings_view">
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="false"
             android:key="pref_view_rememberLastSite"
             android:title="@string/settings_view_rememberLastSite"
             android:summary="@string/settings_view_rememberLastSite_summary" />
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="false"
             android:key="pref_view_high_res"
             android:title="@string/settings_view_high_res"
@@ -36,19 +36,19 @@
             android:dialogTitle="@string/settings_view_direction_dialog_title"
             android:defaultValue="0"/>
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="true"
             android:key="pref_view_volume_flick"
             android:title="@string/settings_view_volume_flick"
             android:summary="@string/settings_view_volume_flick_summary"/>
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="false"
             android:key="pref_view_one_pic_gallery"
             android:title="@string/settings_view_open_one_pic_gallery"
             android:summary="@string/settings_view_open_one_pic_gallery_summary"/>
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="false"
             android:key="pref_view_one_hand"
             android:title="@string/settings_view_one_hand"
@@ -60,13 +60,13 @@
         android:key="pref_download_settings"
         android:title="@string/settings_download">
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="true"
             android:key="pref_download_high_res"
             android:title="@string/settings_download_high_res"
             android:summary="@string/settings_download_high_res_summary"/>
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="true"
             android:key="pref_download_nomedia"
             android:title="@string/settings_download_nomedia"
